[package]
name = "kvs"
version = "0.1.0"
authors = ["Yue Yin <yueyin.dev@gmail.com>"]
description = "A key-value store in Rust"
edition = "2021"

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"