[package]
name = "kvs"
version = "0.1.0"
authors = ["Yue Yin <yueyin.dev@gmail.com>"]
description = "A key-value store in Rust"
edition = "2021"

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sled = "0.34"
num_cpus = "1.13.1"
rayon = "1.5"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"
